2007-08-22  Dan Williams  <dcbw@redhat.com>

	* src/menu-items.c
	  src/menu-items.h
		- Make NMNetworkMenuItem a GtkCheckMenuItem subclass, not a random structure
			that contains all the widgets
		- Make the NMNetworkMenuItem accessors sane (split them out for SSID,
			strength, and detail instead a gigantic update() procedure)

	* src/applet.c
		- Use new NMNetworkMenuItem object
		- (nma_dropdown_menu_clear): remove children from the menu rather than
			destroying them directly
		- (sort_wireless_networks): ensure both SSIDs are valid before trying
			to access their contents
		- (nma_add_networks_helper): check for an existing menu item that
			represents this AP, based on a hash of certain AP properties.  If
			found, use that item instead of adding a new item.
		- (ap_hash): hash certain AP properties to combine BSSIDs into one menu
			item when needed

2007-08-21  Dan Williams  <dcbw@redhat.com>

	* src/applet.c
		- (sort_wireless_networks): fix various errors; ensure 0 is returned on
			when the two APs are equal, and don't use string comparisons because
			SSIDs can have embedded nulls as they are byte arrays, not strings

2007-08-20  Dan Williams  <dcbw@redhat.com>

	* src/applet.c
		- (sort_wireless_networks): new function
		- (nma_menu_device_add_networks): sort networks

2007-08-17  Dan Williams  <dcbw@redhat.com>

	* src/applet.c
	  src/applet.h
		- (foo_update_icon, foo_set_icon, nma_finalize, nma_icons_free,
		   nma_icons_load_from_disk): use an array with slots instead of a
			list for the icon layers.  fixes races between link and VPN icon
			layers depending on which one gets set first

2007-08-15  Dan Williams  <dcbw@redhat.com>

	* src/applet.c
		- (foo_set_icon): add note that this is broken when VPN connection
			icon is set before main icon.  Layering here is buggy.
		- (foo_client_state_change): force an icon update of the VPN layer
			when updating the main icon
		- (foo_manager_running): remove incorrect comment
